2001-08-31  John Harper  <jsh@pixelslut.com>

	* ~/src/sawfish/lisp/sawfish/wm/util/stacking.jl
	(maybe-raise-window, maybe-lower-window): when adding server
	timestamp to the client message, subtract one from the actual
	last seen timestamp. Done for same reason as in windows.c

	* ~/src/sawfish/lisp/sawfish/wm/util/display-window.jl
	(display-window-without-focusing): new (private) keyword
	parameter WILL-REFOCUS. Pass this value along to
	select-workspace

	(display-window): pass WILL-REFOCUS as true when we'll be
	focusing a window afterwards (helps avoid some race conditions)

2001-08-24  John Harper  <jsh@pixelslut.com>

	* sawfish/wm/menus.jl: ensure menu-process is nil after being
	killed. Also, never try to kill it unless it's non-nil

2001-08-23  John Harper  <jsh@pixelslut.com>

	* sawfish/wm/commands.jl (no-operation): new command. Fixes
	8463

	* sawfish/wm/state/configure.jl (configure-request-handler):
	don't allow the window to be moved or resized when it's
	maximized. Fixes 8410

	* sawfish/wm/state/maximize.jl (window-locked-vertically-p,
	window-locked-horizontally-p): new functions

	* sawfish/wm/placement.jl (place-window-randomly): removed
	bogus middle cases from from x and y position calculations.
	Fixes 8415

	* sawfish/wm/ext/match-window.jl
	(match-window-grab-x-property): take a symbol with the actual
	name of the X property, not one of the strings in the
	match-window-x-properties list

Sat Aug 18 16:32:37 2001  Owen Taylor  <otaylor@redhat.com>

	* sawfish/wm/windows.jl: Offset windows properly whose gravity
	point is centered horizontally or vertically.

2001-07-23  John Harper  <jsh@pixelslut.com>

	* sawfish/wm/state/gnome.jl (gnome-event-proxyer): fixed bug
	caused by Click1 events now printing as Click. This caused only
	button-release events to be proxied

2001-07-02  John Harper  <jsh@pixelslut.com>

	* version 0.99

2001-06-18  John Harper  <jsh@pixelslut.com>

	* sawfish/wm/menus.jl (menu-program-stays-running): by popular